force-app/main/default/objects/MDU_Phase__c/MDU_Phase__c.object-meta.xml
<CustomObject>
    <description>Represents an overall MDU deployment initiative. (PVFSL-891)</description>
    <label>MDU Phase</label>
    <nameField>
        <label>MDU Phase Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MDU Phases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>