force-app/main/default/objects/MDU_Phase__c/fields/Building_External_Key__c.field-meta.xml
<CustomField>
    <fullName>Building_External_Key__c</fullName>
    <label>Building External Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>