force-app/main/default/objects/MDU_Phase__c/fields/MDU_Building__c.field-meta.xml
<CustomField>
    <fullName>MDU_Building__c</fullName>
    <description>Building for this phase. (PVFSL-891)</description>
    <label>MDU Building</label>
    <referenceTo>MDU_Building__c</referenceTo>
    <relationshipLabel>MDU Phases</relationshipLabel>
    <relationshipName>MDU_Phases</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>