force-app/main/default/objects/MDU_Phase__c/fields/Phase_Type__c.field-meta.xml
<CustomField>
    <fullName>Phase_Type__c</fullName>
    <description>Type of this phase of the installation. (PVFSL-891)</description>
    <label>Phase Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OSP</fullName>
            </value>
            <value>
                <fullName>Rack</fullName>
            </value>
            <value>
                <fullName>Cable</fullName>
            </value>
            <value>
                <fullName>Trim</fullName>
            </value>
            <value>
                <fullName>CPE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>